fix(socials): update Twitter link to X and remove video functionality style(intro): adjust intro HTML for consistency and add dark mode support

--- a/src/main.scss
+++ b/src/main.scss
@@ -179,6 +179,12 @@ h1 {
     @media only screen and (max-width: 1024px) {
       display:  none;
     }
+
+    @media (prefers-color-scheme: dark) {
+      &, a {
+        color: var(--c-layout-bg);
+      }
+    }
   }
 }
 
